# basalt-xr

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
cmake_modules/: basalt.map  basalt.map.in  basalt.pc.in
data/: aprilgrid_12x7.json  aprilgrid_6x6.json  d455_640x480_calib.json  d455_848x480_calib.json  d455_calib.json  euroc_config.json  euroc_config_no_factors.json  euroc_config_no_weights.json  euroc_config_vo.json  euroc_ds_calib.json  euroc_eucm_calib.json  euroc_rt8_calib.json  hilti_c0c3_ds_calib.json  hilti_config.json  hilti_ds_calib.json  index_calib.json  kitti_config.json  msdmi_calib.json  msdmi_config.json  odysseyplus_kb4_calib.json  odysseyplus_rt8_calib.json  reverbg1_calib.json  reverbg2v2_calib.json  reverbg2v2_factory_calib.json  tumvi_512_config.json  tumvi_512_ds_calib.json  tumvi_512_eucm_calib.json  tumvi_512_recall_config.json  x3pro_calib.json
data/iccv21/: basalt_batch_config.toml
data/monado/: d455-640x480.toml  d455-640x480.toml.in  d455-848x480.toml  d455-848x480.toml.in  d455.toml  d455.toml.in  euroc.toml  euroc.toml.in  hilti.toml  hilti.toml.in  index.toml  index.toml.in  msdmi.toml.in  odysseyplus_kb4.toml  odysseyplus_kb4.toml.in  odysseyplus_rt8.toml  odysseyplus_rt8.toml.in  reverbg1.toml  reverbg1.toml.in  tumvi.toml  tumvi.toml.in  x3pro.toml  x3pro.toml.in
data/monado/wmr-tools/: odysseyplus_wmrcalib_example.json  wmr2bslt_calib.py
doc/monado/: Development.md  Realsense.md  Vive.md  WMR.md
docker/: ubuntu2204.Dockerfile
include/basalt/: vit_tracker.hpp
include/basalt/calibration/: calibration_helper.h  cam_calib.h  cam_imu_calib.h  vignette.h
include/basalt/device/: rs_t265.h
include/basalt/hash_bow/: hash_bow.h
include/basalt/io/: dataset_io.h  dataset_io_euroc.h  dataset_io_kitti.h  dataset_io_rosbag.h  dataset_io_uzh.h  marg_data_io.h
include/basalt/linearization/: block_diagonal.hpp  imu_block.hpp  landmark_block.hpp  landmark_block_abs_dynamic.hpp  linearization_abs_qr.hpp  linearization_abs_sc.hpp  linearization_base.hpp  linearization_rel_sc.hpp
include/basalt/optical_flow/: frame_to_frame_optical_flow.h  multiscale_frame_to_frame_optical_flow.h  optical_flow.h  patch.h  patch_optical_flow.h  patterns.h
include/basalt/optimization/: accumulator.h  linearize.h  poses_linearize.h  poses_optimize.h  spline_linearize.h  spline_optimize.h
include/basalt/utils/: ba_utils.h  build_config.h.in  common_types.h  imu_types.h  keypoints.h  nfr.h  test_utils.h  time_utils.hpp  tracks.h  union_find.h  vio_config.h  vis_matrices.h  vis_utils.h
include/basalt/vi_estimator/: ba_base.h  keypoint_matching.h  landmark_database.h  map_database.h  marg_helper.h  nfr_mapper.h  sc_ba_base.h  sqrt_ba_base.h  sqrt_keypoint_vio.h  sqrt_keypoint_vo.h  vio_estimator.h
include/basalt/vit/: vit_tracker.hpp
scripts/: basalt_convert_kb4_to_rt8.py  basalt_convert_kitti_calib.py  basalt_verify_dataset.py  clang-format-all.sh  install_deps.sh  install_fedora_deps.sh
src/: calibrate.cpp  calibrate_imu.cpp  kitti_eval.cpp  mapper.cpp  mapper_sim.cpp  mapper_sim_naive.cpp  opt_flow.cpp  rs_t265_record.cpp  rs_t265_vio.cpp  time_alignment.cpp  vio.cpp  vio_sim.cpp  vit_tracker.cpp
src/calibration/: aprilgrid.cpp  calibraiton_helper.cpp  cam_calib.cpp  cam_imu_calib.cpp  vignette.cpp
src/device/: rs_t265.cpp
src/io/: dataset_io.cpp  marg_data_io.cpp
src/linearization/: landmark_block.cpp  linearization_abs_qr.cpp  linearization_abs_sc.cpp  linearization_base.cpp  linearization_rel_sc.cpp
src/monado/: .clang-format  .clang-tidy  slam_tracker.cpp  slam_tracker_ui.hpp
src/optical_flow/: optical_flow.cpp
src/utils/: keypoints.cpp  system_utils.cpp  time_utils.cpp  vio_config.cpp  vis_utils.cpp
src/vi_estimator/: ba_base.cpp  keypoint_matching.cpp  landmark_database.cpp  map_database.cpp  marg_helper.cpp  nfr_mapper.cpp  sc_ba_base.cpp  sqrt_ba_base.cpp  sqrt_keypoint_vio.cpp  sqrt_keypoint_vo.cpp  vio_estimator.cpp
src/vit/: vit_tracker.cpp  vit_tracker_ui.hpp
test/: CMakeLists.txt
test/src/: test_linearization.cpp  test_nfr.cpp  test_patch.cpp  test_qr.cpp  test_spline_opt.cpp  test_vio.cpp
